@@ -1,8 +1,6 @@
 1.26.0
 ------
 
-TODO: avoid MPG123_NEED_MORE from non-feed reader reading frame
-      bodies or see it as a feature
 TODO: Figure out terminal printout encoding for Windows.
 TODO: Fix up --quiet: either all errors or none, I guess errors should
       still be shown, but only fatal ones (no junk in the beginning stuff)
@@ -90,6 +88,9 @@ TODO: Make libout123 and/or mpg123 use that to convert on the fly. Optionally?
    opening. This was never recommened and only now should work at all.
 -- Also mpg123_decode_frame() now sets return buffer to NULL and returned byte
    count to zero in case of MPG123_NEED_MORE (or any other early abort).
+-- MPG123_NEED_MORE not returned anymore for non-feeder streams. Got in
+   there for generic partial frame body reads, but was only intended for
+   feeder API.
 -- Added mpg123_set_moreinfo() to support the Lame project's frame analyzer,
    disabled by ./configure --disable-moreinfo.
 -- Added optional storage and retrieval of raw ID3 data.
